2003-11-10  Abel Cheung  <maddog@linux.org.hk>

	* configure.in: Added "kn" to ALL_LINGUAS.

2003-10-29  Martin Wehner  <martin.wehner@epost.de>

	* components/tree/nautilus-tree-model.c:
	* libnautilus-private/nautilus-icon-dnd.c:
	* src/file-manager/fm-properties-window.c:
	Fix leaks.

2003-10-22  Padraig O'Briain  <padraig.obriain@sun.com>

	* libnautilus-private/nautilus-icon-container.c
	(select_previous_or_next_icon): Cycle around to start or end if
	at last or first icon. (bug #82609)

2003-10-21  Alexander Larsson  <alexl@redhat.com>

	* libnautilus-private/nautilus-desktop-link.c:
	* libnautilus-private/nautilus-file-operations.c:
	* libnautilus-private/nautilus-file.c:
	* libnautilus-private/nautilus-icon-factory.c: 
	* src/nautilus-application.c:
	* src/nautilus-bookmark-list.c:
	Fix leaks.
	Patch from Martin Wehner <martin.wehner@epost.de>

=== nautilus 2.4.1 ===

2003-10-13  Alexander Larsson  <alexl@redhat.com>

	* NEWS: 
	Update.
	
	* configure.in:
	Bump version to 2.4.1
	Require eel 2.4.1

2003-10-10  Christophe Fergeau  <teuf@gnome.org>
 
         * components/tree/nautilus-tree-view.c : expand rows in the
	   directory tree view on double-click


2003-10-08  Padraig O'Briain  <padraig.obriain@sun.com>

        * libnautilus-private/nautilus-icon-canvas-item.c
        (nautilus_icon_canvas_item_accessible_ref_state_set) Avoid
        dereferencing a NULL pointer. (bug #124122)

2003-10-02  Alexander Larsson  <alexl@redhat.com>

	* libnautilus-private/nautilus-icon-container.c:
	(placement_grid_new), (canvas_position_to_grid_position),
	(find_empty_location), (lay_down_icons_tblr),
	(nautilus_icon_container_scroll_to_icon):
	Merge from HEAD:
	Force any scheduled relayout to run before scrolling.
	Separate SNAP_SIZE into SNAP_SIZE_X and SNAP_SIZE_Y.
	Make SNAP_SIZE_Y 1/4 of old SNAP_SIZE.

2003-09-29  Alexander Larsson  <alexl@redhat.com>

	* src/file-manager/fm-properties-window.c (permission_button_toggled):